--- a/random/styles-local.html
+++ b/random/styles-local.html
@@ -20,8 +20,15 @@ th {
 	cursor: pointer;
 }
 
-tr:hover {
-	background: #f3f3f3;
+div#stats {
+	float: right;
+	color: #aa8888;
+	margin-top: -10px;
+	padding-right: 10px;
+	text-align: right;
+	padding-bottom: 0;
+	margin-bottom: -50px;
+	line-height: 145%;
 }
 
 a {
@@ -30,6 +37,16 @@ a {
 
 a.searchworks:hover, a.purl:hover {
 	text-decoration: underline;
+}
+
+table.random * {
+	font-size: 3rem;
+}
+
+.key-value td:first-child {
+	font-weight: bold;
+	text-align: right;
+	padding-right: 20px;
 }
 
 </style>
