--- a/random/scripts-audio.html
+++ b/random/scripts-audio.html
@@ -20,8 +20,9 @@ function PlayAudioFile(druid, element, starttime) {
 	   AUDIO = document.getElementById('audio');
    }
 	if (!AUDIO) {
-		document.body.innerHTML += '<audio id="audio"></audio>\n';
-	   AUDIO = document.getElementById('audio');
+	   AUDIO = document.createElement("AUDIO");
+		AUDIO.id = "audio";
+		document.body.appendChild(AUDIO);
 	}
    if (!AUDIO) {
 		console.log('Error: could not set up audio interface\n');
@@ -61,7 +62,6 @@ function PlayAudioFile(druid, element, starttime) {
 		source += '<source src="https://ccrma.stanford.edu/~craig/piano-roll-project/supra-mp4s/' + druid + '.m4a" ';
 		source += 'type="audio/mp4"/>\n';
 		AUDIO.innerHTML = source;
-console.log("source set to", source);
 
 		AUDIOdruid = druid;
 		AUDIO.load();
