--- a/listeners.html
+++ b/listeners.html
@@ -21,7 +21,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	var element = document.querySelector("input#search");
 	if (element) {
 		element.addEventListener("input", function() {
-			doSearch(element.value);
+			doSearch();
 		});
 	}
 
