--- a/random/listeners.html
+++ b/random/listeners.html
@@ -4,6 +4,12 @@
 <script>
 // vim: ts=3
 
+var PEOPLE = {% include data/people.json %}.PERSON;
+var PEEPS = {};
+for (var i=0; i<PEOPLE.length; i++) {
+	PEEPS[PEOPLE[i].NAME] = PEOPLE[i].WIKIPEDIA;
+}
+
 var CGI = {};      // CGI parameters from URL
 var ROLLINFO = [];
 var ATONINDEX = "https://raw.githubusercontent.com/pianoroll/SUPRA/master/index.aton";
