--- a/random/scripts-local.html
+++ b/random/scripts-local.html
@@ -15,6 +15,8 @@
 function displayRandom(list) {
 	var rindex = Math.floor(Math.random() * list.length);
 	if (!list[rindex].DRUID) {
+		console.log("RANDOM INDEX", rindex);
+		console.log("ENTRY AT", rindex, "DOES NOT HAVE DRUID:", list[rindex]);
 		return;
 	}
  	var druid = list[rindex].DRUID.trim();
