--- a/scripts-local.html
+++ b/scripts-local.html
@@ -17,8 +17,7 @@ function displayList(list, query) {
 	output += "<th onclick='sortByText(2)'>Title</th>";
 	output += "<th onclick='sortByText(3)'>Composer</th>";
 	output += "<th onclick='sortByText(4)'>Performer</th>";
-	output += "<th></th>";  // Searchworks link
-	output += "<th></th>";  // PURL link
+	output += "<th colspan='5' >Data and Metadata Links</th>";  // PURL/Searchworks links, etc
 	output += "</tr>";
 	output += "</thead>";
 	output += "<tbody>";
@@ -66,8 +65,48 @@ function displayList(list, query) {
 		output += "</span>";
 		output += "</td>";
 
+		output += "<td>";
+		if (list[i].ROLL_TYPE) {
+			// https://github.com/pianoroll/SUPRA/blob/master/welte-red/midi-exp/bc072xf6791-exp.mid?raw=true
+			output += "<span class='midi'>";
+			output += "<a title='Link to Expressive MIDI file' target='midi' href='";
+			output += "https://github.com/pianoroll/SUPRA/blob/master/";
+			output += list[i].ROLL_TYPE.trim();
+			output += "/midi-exp/";
+			output += list[i].DRUID.trim() + "-exp.mid?raw=true";
+			output += "'>Mexp</a>";
+			output += "</span>";
+		}
+		output += "</td>";
+
+		output += "<td>";
+		if (list[i].ROLL_TYPE) {
+			// https://github.com/pianoroll/SUPRA/blob/master/welte-red/midi-raw/bc072xf6791-raw.mid?raw=true
+			output += "<span class='midi'>";
+			output += "<a title='Link to Raw MIDI file' target='midi' href='";
+			output += "https://github.com/pianoroll/SUPRA/blob/master/";
+			output += list[i].ROLL_TYPE.trim();
+			output += "/midi-raw/";
+			output += list[i].DRUID.trim() + "-raw.mid?raw=true";
+			output += "'>Mraw</a>";
+			output += "</span>";
+		}
+		output += "</td>";
+
+		output += "<td>";
+		// http://ccrma.stanford.edu/~craig/piano-roll-project/supra-mp4s/bc072xf6791.m4a
+		output += "<span class='mp4'>";
+		output += "<a title='Link to MP4 audio file' target='audio' href='";
+		output += "https://ccrma.stanford.edu/~craig/piano-roll-project/supra-mp4s/";
+		output += list[i].DRUID.trim() + ".m4a'>";
+		output += "MP4";
+		output += "</a>";
+		output += "</span>";
+		output += "</td>";
+
 		output += "</tr>";
 	}
+
 	output += "</tbody>";
 	output += "</table>";
 
@@ -126,9 +165,11 @@ function sortByText(index, selector) {
 	});
 
 	var body = document.querySelector("table#red-welte-list tbody");
-	body.innerHTML = "";
-	for (i=0; i<datalist.length; i++) {
-		body.appendChild(datalist[i]);
+	if (body) {
+		body.innerHTML = "";
+		for (i=0; i<datalist.length; i++) {
+			body.appendChild(datalist[i]);
+		}
 	}
 }
 
@@ -180,9 +221,11 @@ function sortByNumber(index, selector) {
 	});
 
 	var body = document.querySelector("table#red-welte-list tbody");
-	body.innerHTML = "";
-	for (i=0; i<datalist.length; i++) {
-		body.appendChild(datalist[i]);
+	if (body) {
+		body.innerHTML = "";
+		for (i=0; i<datalist.length; i++) {
+			body.appendChild(datalist[i]);
+		}
 	}
 }
 
