Add separate page for duplicate analysis, add scanning statistics to statistics page.

--- a/duplicates/listeners.html
+++ b/duplicates/listeners.html
@@ -37,8 +37,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 function doActions(listOfRolls) {
 	DisplayStats(listOfRolls);
-	displayStatsOnPage(listOfRolls, "#basic");
-	displayScanStats(listOfRolls, "#scan");
+	displayDuplicates(listOfRolls, "#duplicates");
 }
 
 
