--- a/duplicates/styles-local.html
+++ b/duplicates/styles-local.html
@@ -1,36 +1,12 @@
 
 <style>
 
-.warning3 {
-	background: #cc0000;
-	color: white;
-}
-
-.warning2 {
-	background: orange;
-	color: white;
-}
-
-.warning1 {
-	background: yellow;
-	color: black;
-}
-
-#scanStats th {
-	padding-right: 10px;
-}
-
-table.dupes, table#scanStats { 
+table.dupes { 
 	font-size: 14px;
 	margin-top: 40px;
 }
 
 table.triple {
-	line-height: 1.2;
-	margin-top: 40px;
-}
-
-table#scanStats {
 	line-height: 1.2;
 	margin-top: 40px;
 }
